Search page added

--- a/TravelBuddy/index.html
+++ b/TravelBuddy/index.html
@@ -73,10 +73,10 @@
 											<span class="user-name">Bhaumik Patel</span>
 											<p class="text-muted small user-email">mail@gmail.com</p>
 											<div class="divider"></div>
-											
-												<a href="#" class="btn btn-primary btn-block btn-sm active">View
-													Profile</a>
-											
+
+											<a href="#" class="btn btn-primary btn-block btn-sm active">View
+												Profile</a>
+
 										</div>
 									</div>
 								</div>
@@ -204,8 +204,8 @@
 
 							</div>
 						</div>
-						<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 ">
-							<a href="#" class="btn btn-default btn-block"> <i
+						<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 ">
+							<a href="search.html" class="btn btn-default btn-block"> <i
 								class="fa fa-rocket"></i> Find
 							</a>
 						</div>
@@ -1058,10 +1058,155 @@
 			<div class="our-app-status"></div>
 		</div>
 	</div>
+	<!-- /.main-container -->
 	<div class="chevrons"></div>
 	<div class="white"></div>
 	<div class="light"></div>
-	<!-- /.main-container -->
+	<div class="chevrons">
+		<div class="container promo">
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+
+
+					<div class="BigTitle gr-light">A global mindset with a New
+						York perspective.</div>
+
+				</div>
+				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+					<br> <span class="high-light">95 people</span>
+					<p>in our TriBeCa office coming from</p>
+					<span class="high-light">15 countries around the world.</span>
+					<div class="countries">
+						<ul>
+							<li>Australia</li>
+							<li>Brazil</li>
+							<li>Canada</li>
+							<li>China</li>
+							<li>France</li>
+							<li>India</li>
+							<li>Indonesia</li>
+							<li>Japan</li>
+							<li>Korea</li>
+							<li>Latvia</li>
+							<li>Mexico</li>
+							<li>Netherlands</li>
+							<li>Sweden</li>
+							<li>UK</li>
+							<li>USA</li>
+
+
+						</ul>
+
+
+
+
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+	<section id="about">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2 class="section-heading">Company Timeline</h2>
+					<hr class="star-primary">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-12">
+					<ul class="timeline">
+						<li>
+							<div class="timeline-image">
+								<img class="img-circle img-responsive" src="img/about/1.jpg"
+									alt="">
+							</div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h4>2009-2011</h4>
+									<h4 class="subheading">Our Humble Beginnings</h4>
+								</div>
+								<div class="timeline-body">
+									<p class="text-muted">Lorem ipsum dolor sit amet,
+										consectetur adipisicing elit. Sunt ut voluptatum eius
+										sapiente, totam reiciendis temporibus qui quibusdam,
+										recusandae sit vero unde, sed, incidunt et ea quo dolore
+										laudantium consectetur!</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted">
+							<div class="timeline-image">
+								<img class="img-circle img-responsive" src="img/about/2.jpg"
+									alt="">
+							</div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h4>March 2011</h4>
+									<h4 class="subheading">An Agency is Born</h4>
+								</div>
+								<div class="timeline-body">
+									<p class="text-muted">Lorem ipsum dolor sit amet,
+										consectetur adipisicing elit. Sunt ut voluptatum eius
+										sapiente, totam reiciendis temporibus qui quibusdam,
+										recusandae sit vero unde, sed, incidunt et ea quo dolore
+										laudantium consectetur!</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="timeline-image">
+								<img class="img-circle img-responsive" src="img/about/3.jpg"
+									alt="">
+							</div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h4>December 2012</h4>
+									<h4 class="subheading">Transition to Full Service</h4>
+								</div>
+								<div class="timeline-body">
+									<p class="text-muted">Lorem ipsum dolor sit amet,
+										consectetur adipisicing elit. Sunt ut voluptatum eius
+										sapiente, totam reiciendis temporibus qui quibusdam,
+										recusandae sit vero unde, sed, incidunt et ea quo dolore
+										laudantium consectetur!</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted">
+							<div class="timeline-image">
+								<img class="img-circle img-responsive" src="img/about/4.jpg"
+									alt="">
+							</div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h4>July 2014</h4>
+									<h4 class="subheading">Phase Two Expansion</h4>
+								</div>
+								<div class="timeline-body">
+									<p class="text-muted">Lorem ipsum dolor sit amet,
+										consectetur adipisicing elit. Sunt ut voluptatum eius
+										sapiente, totam reiciendis temporibus qui quibusdam,
+										recusandae sit vero unde, sed, incidunt et ea quo dolore
+										laudantium consectetur!</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted">
+							<div class="timeline-image">
+								<h4>
+									Be Part <br>Of Our <br>Story!
+								</h4>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
 
 
 
